--- a/shopify/sections/main-list-collections.liquid
+++ b/shopify/sections/main-list-collections.liquid
@@ -15,10 +15,10 @@
                   400px
                 "
                 srcset="
-                  {{ collection.image | img_url: '275x' }} 275w,
-                  {{ collection.image | img_url: '450x' }} 450w
+                  {{ collection.image | image_url: width: 275 }} 275w,
+                  {{ collection.image | image_url: width: 450 }} 450w
                 "
-                src="{{ collection.image | img_url: '400x' }}"
+                src="{{ collection.image | image_url: width: 400 }}"
                 alt="{{ collection.image.alt | escape }}"
                 loading="lazy"
                 class="w-full h-32 sm:h-48 lg:h-64 xl:h-80 object-cover object-center"
